// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be rendered correctly 1`] = `
<div
  className="uui-font-sans uui-text-night700 root line-height-18 font-size-14 v-padding-9 container"
>
  Test text
</div>
`;

exports[`Text should be rendered correctly with extra props 1`] = `
<div
  className="uui-font-sans-light uui-text-sun root line-height-30 font-size-14 v-padding-6 container"
  onClick={[Function]}
>
  Test text
</div>
`;
